feat(prism-agent): implement REST endpoints for accept credential offer and issue credential
